heading breakdown on mobile bug fixed

--- a/src/styles/home/flashSale.css
+++ b/src/styles/home/flashSale.css
@@ -15,13 +15,26 @@
 	display: none;
 }
 
-@media (max-width: 580px){
-	.flash-sale .header{
+@media (max-width: 580px) {
+	.flash-sale .header {
 		flex-direction: column;
 		gap: 1rem;
 		align-items: flex-start;
 	}
 	.flash-sale .header .scrollButtons {
 		margin-left: 1rem;
+	}
+}
+@media (max-width: 425px) {
+	.flashSaleHeadding {
+		font-size: 1.5rem;
+	}
+	.flash-sale {
+		padding-inline: 6px;
+	}
+}
+@media (max-width: 365px) {
+	.flashSaleHeadding {
+		font-size: 1.2rem;
 	}
 }
